<resources>
    <string name="app_name">FinanceApp</string>
    <string name="income">Доход</string>
    <string name="cost">Расход</string>
    <string name="apply">Принять</string>
    <string name="black">#000000</string>
    <string name="green">#10AF7F</string>
    <string name="main">Главная</string>
    <string name="history">История</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="July">Июль</string>
    <string name="August">Август</string>
    <string name="september">Сентябрь</string>
    <string name="October">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="December">Декабрь</string>
    <string name="choose_category">Пожалуйста выберите категорию!</string>
    <string name="enter_amount">Введите сумму!</string>
    <string name="not_cost">Нет расходов</string>
    <string name="not_income">Нет дохода</string>
    <string name="not_negative_number">Число не может быть отрицательным!</string>
    <string name="number_not_zero">Число не может быть 0!</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="check_balance">Внимание баланс \n будет ниже 0!</string>
    <string name="empty">Пусто</string>
    <string name="balance_month">Остаток на месяц</string>
    <string name="all_cost">Общие расходы</string>
    <string name="sum">Сумма</string>
    <string name="balance">Ваш баланс</string>
    <string name="plan">План</string>
    <string name="lacks">не хватает</string>
    <string name="now">сейчас</string>
    <string name="expected">ожидается</string>
    <string name="planner">Planner+</string>
    <string name="free_lan">Фриланс</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_month">Новый месяц</string>
    <string name="now_month">На текущий месяц</string>
    <string name="next_month">На следующий месяц</string>
    <string name="choose_date">Выберите дату</string>
    <string name="expected_sum">Ожидаемая сумма</string>
    <string name="accept">Принять</string>
    <string name="specify_date">Укажите дату!</string>
    <string name="new_sum">Новая сумма</string>
    <string name="title_source">Название источника</string>
    <string name="enter_source">Введите источник!</string>
    <string name="date_expected">Дата превышает ожидания</string>
    <string name="category">Категории</string>
    <string name="month">Месяц</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="not_operation">Пока нет никаких операций</string>
    <string name="not_plan">Пока нет никаких планов</string>
    <string name="next">Дальше</string>
    <string name="now_balance">Баланс</string>
    <string name="window_check_finance">Окно для слежения за вашими Финансами</string>
    <string name="main_fun_balance">Основная функция выполняет добавление Доходов и Расходов</string>
    <string name="fragment_for_add">Фрагмент для добавления</string>
    <string name="costs">Расходов</string>
    <string name="incomes">Доходов</string>
    <string name="fragment_for_watch_list_balance">Фрагмент где будут отоброжаться
        списки Доходов и Расходов</string>
    <string name="window_for_watch_costs">Окно для просмотра Расходов по Категориям и Месяцам</string>
    <string name="now_plan">Планирование</string>
    <string name="window_for_plan">Окно для Планирования финансов</string>
    <string name="main_fun_plan">Основная функция выполняет добавление месяца с ожидаемой суммой</string>
    <string name="click_for_month_plan">Кнопка для добавление месяца с ожидаемой суммой</string>
    <string name="card_plan"> Для добавления доходов к этому месяца нажмите на карточку</string>

</resources>