<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BalanceFragment">

    <ImageView
        android:id="@+id/balance_background"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/two_three_five"
        android:scaleType="fitXY"
        android:src="@drawable/balance_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/twenty_four"
        app:layout_constraintBottom_toBottomOf="@id/balance_background"
        app:layout_constraintTop_toTopOf="@id/balance_background">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/balance_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2\nМай" />

        <LinearLayout
            android:id="@+id/balance_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/secondary_white"
                android:textSize="@dimen/fourteen_sp" />

            <TextView
                android:id="@+id/balance_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="9"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp"
                tools:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cost_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/balance_layout">

            <TextView
                android:id="@+id/cost_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/six"
                android:text="@string/cost"
                android:textColor="@color/secondary_white"
                android:textSize="@dimen/fourteen_sp" />

            <TextView
                android:id="@+id/cost_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="9"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp"
                app:drawableStartCompat="@drawable/ic_minus"
                tools:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/income_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_layout">

            <TextView
                android:id="@+id/income_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/six"
                android:text="@string/income"
                android:textColor="@color/secondary_white"
                android:textSize="@dimen/fourteen_sp" />

            <TextView
                android:id="@+id/income_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="9"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp"
                app:drawableStartCompat="@drawable/ic_plus"
                tools:text="0" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/twelve"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cost_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_two"
                android:fontFamily="sans-serif-medium"
                android:textColor="#9C9C9C"
                android:textSize="@dimen/sixteen_sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/cost" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cost_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/income_list_title"
                app:layout_constraintTop_toBottomOf="@id/cost_list_title"
                tools:itemCount="2"
                tools:listitem="@layout/item_cost" />

            <TextView
                android:id="@+id/income_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="sans-serif-medium"
                android:textColor="#9C9C9C"
                android:textSize="@dimen/sixteen_sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cost_recycler"
                tools:text="@string/income" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/income_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/income_list_title"
                tools:itemCount="4"
                tools:listitem="@layout/item_income" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_background">

        <include
            android:id="@+id/include_empty"
            layout="@layout/empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>